
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int value ;
struct option_info {char* type; int name; } ;
typedef int name ;
typedef enum status_code { ____Placeholder_status_code } status_code ;


 int SIZEOF_STR ;
 int SUCCESS ;
 int enum_name_copy (char*,int,int ) ;
 int error (char*) ;
 int format_option_value (struct option_info*,char*,int) ;
 int strcmp (char*,char*) ;
 int string_nformat (char*,size_t,size_t*,char*,char const*,char*,char const*,char*) ;

__attribute__((used)) static enum status_code
format_view_column_options(struct option_info options[], size_t options_size, char buf[], size_t bufsize)
{
 char name[SIZEOF_STR];
 char value[SIZEOF_STR];
 size_t bufpos = 0;
 const char *sep = ":";
 int i;

 buf[0] = 0;

 for (i = 0; i < options_size; i++) {
  struct option_info *option = &options[i];
  const char *assign = "=";

  if (!enum_name_copy(name, sizeof(name), option->name)
      || !format_option_value(option, value, sizeof(value)))
   return error("No space left in buffer");

  if (!strcmp(name, "display")) {
   name[0] = 0;
   assign = "";

  }

  if (!strcmp(option->type, "bool") && !strcmp(value, "yes")) {
   if (!*name) {
    sep = ":yes,";
    continue;
   }






  }

  if (!strcmp(option->type, "int") && !strcmp(value, "0"))
   continue;

  if (!string_nformat(buf, bufsize, &bufpos, "%s%s%s%s",
        sep, name, assign, value))
   return error("No space left in buffer");

  sep = ",";
 }

 return SUCCESS;
}
