; ModuleID = '/home/carl/AnghaBench/tig/src/extr_view.c_format_view_column_options.c'
source_filename = "/home/carl/AnghaBench/tig/src/extr_view.c_format_view_column_options.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.option_info = type { i8*, i32 }

@SIZEOF_STR = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [2 x i8] c":\00", align 1
@.str.1 = private unnamed_addr constant [2 x i8] c"=\00", align 1
@.str.2 = private unnamed_addr constant [24 x i8] c"No space left in buffer\00", align 1
@.str.3 = private unnamed_addr constant [8 x i8] c"display\00", align 1
@.str.4 = private unnamed_addr constant [1 x i8] zeroinitializer, align 1
@.str.5 = private unnamed_addr constant [5 x i8] c"bool\00", align 1
@.str.6 = private unnamed_addr constant [4 x i8] c"yes\00", align 1
@.str.7 = private unnamed_addr constant [6 x i8] c":yes,\00", align 1
@.str.8 = private unnamed_addr constant [4 x i8] c"int\00", align 1
@.str.9 = private unnamed_addr constant [2 x i8] c"0\00", align 1
@.str.10 = private unnamed_addr constant [9 x i8] c"%s%s%s%s\00", align 1
@.str.11 = private unnamed_addr constant [2 x i8] c",\00", align 1
@SUCCESS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.option_info*, i64, i8*, i64)* @format_view_column_options to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @format_view_column_options(%struct.option_info* %0, i64 %1, i8* %2, i64 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca %struct.option_info*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i64, align 8
  %10 = alloca i8*, align 8
  %11 = alloca i64, align 8
  %12 = alloca i64, align 8
  %13 = alloca i64, align 8
  %14 = alloca i8*, align 8
  %15 = alloca i32, align 4
  %16 = alloca %struct.option_info*, align 8
  %17 = alloca i8*, align 8
  %18 = alloca i32, align 4
  store %struct.option_info* %0, %struct.option_info** %6, align 8
  store i64 %1, i64* %7, align 8
  store i8* %2, i8** %8, align 8
  store i64 %3, i64* %9, align 8
  %19 = load i32, i32* @SIZEOF_STR, align 4
  %20 = zext i32 %19 to i64
  %21 = call i8* @llvm.stacksave()
  store i8* %21, i8** %10, align 8
  %22 = alloca i8, i64 %20, align 16
  store i64 %20, i64* %11, align 8
  %23 = load i32, i32* @SIZEOF_STR, align 4
  %24 = zext i32 %23 to i64
  %25 = alloca i8, i64 %24, align 16
  store i64 %24, i64* %12, align 8
  store i64 0, i64* %13, align 8
  store i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0), i8** %14, align 8
  %26 = load i8*, i8** %8, align 8
  %27 = getelementptr inbounds i8, i8* %26, i64 0
  store i8 0, i8* %27, align 1
  store i32 0, i32* %15, align 4
  br label %28

28:                                               ; preds = %90, %4
  %29 = load i32, i32* %15, align 4
  %30 = sext i32 %29 to i64
  %31 = load i64, i64* %7, align 8
  %32 = icmp ult i64 %30, %31
  br i1 %32, label %33, label %93

33:                                               ; preds = %28
  %34 = load %struct.option_info*, %struct.option_info** %6, align 8
  %35 = load i32, i32* %15, align 4
  %36 = sext i32 %35 to i64
  %37 = getelementptr inbounds %struct.option_info, %struct.option_info* %34, i64 %36
  store %struct.option_info* %37, %struct.option_info** %16, align 8
  store i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.1, i64 0, i64 0), i8** %17, align 8
  %38 = trunc i64 %20 to i32
  %39 = load %struct.option_info*, %struct.option_info** %16, align 8
  %40 = getelementptr inbounds %struct.option_info, %struct.option_info* %39, i32 0, i32 1
  %41 = load i32, i32* %40, align 8
  %42 = call i32 @enum_name_copy(i8* %22, i32 %38, i32 %41)
  %43 = icmp ne i32 %42, 0
  br i1 %43, label %44, label %49

44:                                               ; preds = %33
  %45 = load %struct.option_info*, %struct.option_info** %16, align 8
  %46 = trunc i64 %24 to i32
  %47 = call i32 @format_option_value(%struct.option_info* %45, i8* %25, i32 %46)
  %48 = icmp ne i32 %47, 0
  br i1 %48, label %51, label %49

49:                                               ; preds = %44, %33
  %50 = call i32 @error(i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str.2, i64 0, i64 0))
  store i32 %50, i32* %5, align 4
  store i32 1, i32* %18, align 4
  br label %95

51:                                               ; preds = %44
  %52 = call i32 @strcmp(i8* %22, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.3, i64 0, i64 0))
  %53 = icmp ne i32 %52, 0
  br i1 %53, label %56, label %54

54:                                               ; preds = %51
  %55 = getelementptr inbounds i8, i8* %22, i64 0
  store i8 0, i8* %55, align 16
  store i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str.4, i64 0, i64 0), i8** %17, align 8
  br label %56

56:                                               ; preds = %54, %51
  %57 = load %struct.option_info*, %struct.option_info** %16, align 8
  %58 = getelementptr inbounds %struct.option_info, %struct.option_info* %57, i32 0, i32 0
  %59 = load i8*, i8** %58, align 8
  %60 = call i32 @strcmp(i8* %59, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.5, i64 0, i64 0))
  %61 = icmp ne i32 %60, 0
  br i1 %61, label %70, label %62

62:                                               ; preds = %56
  %63 = call i32 @strcmp(i8* %25, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.6, i64 0, i64 0))
  %64 = icmp ne i32 %63, 0
  br i1 %64, label %70, label %65

65:                                               ; preds = %62
  %66 = load i8, i8* %22, align 16
  %67 = icmp ne i8 %66, 0
  br i1 %67, label %69, label %68

68:                                               ; preds = %65
  store i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.7, i64 0, i64 0), i8** %14, align 8
  br label %90

69:                                               ; preds = %65
  br label %70

70:                                               ; preds = %69, %62, %56
  %71 = load %struct.option_info*, %struct.option_info** %16, align 8
  %72 = getelementptr inbounds %struct.option_info, %struct.option_info* %71, i32 0, i32 0
  %73 = load i8*, i8** %72, align 8
  %74 = call i32 @strcmp(i8* %73, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.8, i64 0, i64 0))
  %75 = icmp ne i32 %74, 0
  br i1 %75, label %80, label %76

76:                                               ; preds = %70
  %77 = call i32 @strcmp(i8* %25, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.9, i64 0, i64 0))
  %78 = icmp ne i32 %77, 0
  br i1 %78, label %80, label %79

79:                                               ; preds = %76
  br label %90

80:                                               ; preds = %76, %70
  %81 = load i8*, i8** %8, align 8
  %82 = load i64, i64* %9, align 8
  %83 = load i8*, i8** %14, align 8
  %84 = load i8*, i8** %17, align 8
  %85 = call i32 @string_nformat(i8* %81, i64 %82, i64* %13, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.10, i64 0, i64 0), i8* %83, i8* %22, i8* %84, i8* %25)
  %86 = icmp ne i32 %85, 0
  br i1 %86, label %89, label %87

87:                                               ; preds = %80
  %88 = call i32 @error(i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str.2, i64 0, i64 0))
  store i32 %88, i32* %5, align 4
  store i32 1, i32* %18, align 4
  br label %95

89:                                               ; preds = %80
  store i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.11, i64 0, i64 0), i8** %14, align 8
  br label %90

90:                                               ; preds = %89, %79, %68
  %91 = load i32, i32* %15, align 4
  %92 = add nsw i32 %91, 1
  store i32 %92, i32* %15, align 4
  br label %28

93:                                               ; preds = %28
  %94 = load i32, i32* @SUCCESS, align 4
  store i32 %94, i32* %5, align 4
  store i32 1, i32* %18, align 4
  br label %95

95:                                               ; preds = %93, %87, %49
  %96 = load i8*, i8** %10, align 8
  call void @llvm.stackrestore(i8* %96)
  %97 = load i32, i32* %5, align 4
  ret i32 %97
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @enum_name_copy(i8*, i32, i32) #2

declare dso_local i32 @format_option_value(%struct.option_info*, i8*, i32) #2

declare dso_local i32 @error(i8*) #2

declare dso_local i32 @strcmp(i8*, i8*) #2

declare dso_local i32 @string_nformat(i8*, i64, i64*, i8*, i8*, i8*, i8*, i8*) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
